--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- music -->
+    <div id="music"></div>
     <!-- phone1 -->
     <div id="phone1">
         <div id="batery1" class="rim">
